--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -32,6 +32,8 @@
   </div>
 <% end %>
 
+<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5d2f4bbe364d580011c349e5&product=inline-share-buttons' async='async'></script>
+<script src="https://apis.google.com/js/api:client.js?onload=init"></script>
 <%= javascript_include_tag 'welcome/application.js' %>
 
 </body>
