--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -13,7 +13,7 @@
     <%= render partial: "components/collection/collection",
                locals:  {
                    items:      @items[:user],
-                   title:     {
+                   title:      {
                        principal: "Eventos encontrados para \"#{params[:q]}\""
                    },
                    identifier: 'busca',
@@ -26,7 +26,7 @@
       <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:today],
-                     title:     {
+                     title:      {
                          principal: "Eventos acontecendo hoje e amanhã"
                      },
                      identifier: 'today-and-tomorrow',
@@ -38,50 +38,53 @@
                      detail:     @items[:today][:detail]
                  } %>
     </section>
-    <section>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:follow],
-                     title:     {
-                         principal: "Tópicos que você segue",
-                         secondary: "Explore os eventos de organizadores, locais e tags que você segue como #{current_user.following_topics(only: :name, as: :list, size: 3)}".html_safe
-                     },
-                     identifier: 'follow',
-                     type:       :large,
-                     filters:    {
-                         categories: true,
-                         ocurrences: true,
-                         kinds:      true
-                     },
-                     detail:     @items[:follow][:detail]
-                 } %>
-    </section>
+    <% if current_user %>
+      <section>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:follow],
+                       title:      {
+                           principal: "Tópicos que você segue",
+                           secondary: "Explore os eventos de organizadores, locais e tags que você segue como #{current_user.following_topics(only: :name, as: :list, size: 3)}".html_safe
+                       },
+                       identifier: 'follow',
+                       type:       :large,
+                       filters:    {
+                           categories: true,
+                           ocurrences: true,
+                           kinds:      true
+                       },
+                       detail:     @items[:follow][:detail]
+                   } %>
+      </section>
 
-    <section>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:user_suggestions],
-                     title:     {
-                         principal: "Indicados para #{current_user.name}",
-                         secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
-                     },
-                     identifier: 'user-suggestions',
-                     type:       :large,
-                     filters:    {
-                         categories: true,
-                         ocurrences: true,
-                         kinds:      false
-                     },
-                     detail:     @items[:user_suggestions][:detail]
-                 } %>
 
-    </section>
+      <section>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:user_suggestions],
+                       title:      {
+                           principal: "Indicados para #{current_user.name}",
+                           secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
+                       },
+                       identifier: 'user-suggestions',
+                       type:       :large,
+                       filters:    {
+                           categories: true,
+                           ocurrences: true,
+                           kinds:      false
+                       },
+                       detail:     @items[:user_suggestions][:detail]
+                   } %>
+
+      </section>
+    <% end %>
 
     <section>
       <%= render partial: "components/collection/collection",
                  locals:  {
                      items:      @items[:user_personas],
-                     title:     {
+                     title:      {
                          principal: "Gostos parecidos",
                          secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
                      },
