--- a/web/app/assets/stylesheets/components/me-hero.scss
+++ b/web/app/assets/stylesheets/components/me-hero.scss
@@ -69,7 +69,7 @@
       margin: 0 6px;
       position: relative;
       top: 3px;
-      color: $brand-color;
+      color: $brand-color-left;
     }
   }
 
