--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -1,13 +1,13 @@
 <div data-controller="float-menu" data-target="float-menu.menu" class="me-float-menu">
   <div class="me-float-menu__nav">
-    <div class="me-float-menu__item" data-action="click->float-menu#scrollTo" data-collection-identifier="saves">
-      <div class="me-float-menu__icon">
-        <i class="material-icons">stars</i>
-      </div>
-      <div class="me-float-menu__label">
-        Salvos
-      </div>
-    </div>
+<!--    <div class="me-float-menu__item" data-action="click->float-menu#scrollTo" data-collection-identifier="saves">-->
+<!--      <div class="me-float-menu__icon">-->
+<!--        <i class="material-icons">stars</i>-->
+<!--      </div>-->
+<!--      <div class="me-float-menu__label">-->
+<!--        Salvos-->
+<!--      </div>-->
+<!--    </div>-->
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="today-and-tomorrow">
       <div class="me-float-menu__icon">
         <i class="material-icons">today</i>
