--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="me-footer">
     <span>
-        <b>Alegreme - Eventos e atividades em Porto Alegre</b>
+        <b>Aproveite a cidade de Porto Alegre</b>
     </span>
-    <span>Feito com amor em Porto Alegre para Porto Alegre por porto alegrenses</span>
+<!--    <span>Feito com amor em Porto Alegre para Porto Alegre por porto alegrenses</span>-->
 </div>
 
