--- a/web/app/assets/stylesheets/components/me-float-menu.scss
+++ b/web/app/assets/stylesheets/components/me-float-menu.scss
@@ -2,12 +2,13 @@
 
 .me-float-menu {
   position: fixed;
-  top: 64px;
+  top: 65px;
   bottom: 90px;
-  left: 12px;
+  left: 2px;
   z-index: 1;
   will-change: transform;
-  color: $icon-light-color;
+  color: $icon-color;
+  user-select: none;
 
   @include mdc-layout-grid-media-query_("phone") {
     display: none;
@@ -18,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     width: 72px;
-    padding: 32px 0 0 0;
+    padding: 45px 0 0 0;
     text-align: center;
     font-size: 10px;
   }
@@ -46,7 +47,7 @@
     transition: opacity 0.2s ease-in;
 
     &.is-active {
-      color: $icon-color;
+      color: $brand-color-intersect;
     }
   }
 
