--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -11,6 +11,7 @@ $border-color: #e0e0e0;
   position: fixed;
   border-bottom: 1px solid $border-color;
   top: 0;
+  user-select: none;
 
   @include mdc-layout-grid-media-query_("phone") {
     background-color: $background-color;
@@ -27,12 +28,13 @@ $border-color: #e0e0e0;
     height: 22px;
 
     &-icon {
-      height: 45px;
+      height: 30px;
     }
 
     &-text{
-      fill: $brand-secondary-color;
-      height: 25px;
+      height: 22px;
+      margin: 2px 0 0 6px;
+      //display: none;
     }
 
     @include mdc-layout-grid-media-query_("phone") {
