--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -59,7 +59,7 @@
   & .mdc-chip {
     color: $font-secondary-color;
     background-color: $background-color;
-    border: 2px solid $border-color;
+    border: $chip-border-size solid $border-color;
     font-weight: 400;
     font-size: 10px;
     text-transform: uppercase;
