--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -27,27 +27,27 @@
   <% if params['controller'] == 'devise/sessions' || current_page?(controller: 'feeds', action: 'index') %>
     <%= render partial: "layouts/app-top-bar" %>
     <%= render partial: 'layouts/hero' unless current_user %>
-    <section class="me-page__feed-section">
+    <section class="me-page me-page--feed-section">
       <div class="me-overlay"></div>
       <%#= render partial: 'layouts/bot' %>
       <%= yield %>
     </section>
   <% elsif params['controller'] == 'events' && params['action'] == 'show' %>
     <%= render partial: "layouts/app-top-bar", locals: {controller: 'events'} %>
-    <section class="me-page__events-section">
+    <section class="me-page--events-section">
       <div class="me-overlay"></div>
       <%= yield %>
     </section>
   <% elsif params['controller'] == 'feeds' && params['action'] == 'train' %>
     <%= render partial: "layouts/app-top-bar" %>
-    <section class="me-page__train-section">
+    <section class="me-page--train-section">
       <%#= render partial: 'layouts/bot' %>
       <div class="me-overlay"></div>
       <%= yield %>
     </section>
   <% else %>
     <%= render partial: "layouts/app-top-bar" %>
-    <section class="me-page__feed-section">
+    <section class="me-page--feed-section">
       <%#= render partial: 'layouts/bot' %>
       <div class="me-overlay"></div>
       <%= yield %>
