--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -4,7 +4,7 @@
     <div class="me-feed__section"
          data-controller="section"
          data-target="section.section"
-         data-section-items-count="<%= detail[:events_in_collection] if detail %>"
+         data-section-items-count="<%= items[:detail][:events_in_collection]  %>"
          data-observable="float-menu.section"
          id="<%= identifier %>">
       <div class="me-feed__section-head">
@@ -66,7 +66,7 @@
                 identifier: identifier
             } %>
 
-            <% if detail[:events_in_collection] < 4 %>
+            <% if items[:detail][:events_in_collection] < 4 %>
               <div class="me-feed__empty">
                 <i class="material-icons-sharp sentiment-satisfied">
                   sentiment_satisfied
@@ -77,7 +77,7 @@
 
           <% end %>
         </div>
-        <% if detail[:events_in_collection] >= 8 %>
+        <% if items[:detail][:events_in_collection] >= 8 %>
           <div class="me-feed__load-more"
                data-action="click->section#loadMore"
                data-target="section.loadMoreButton">
