--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
       <div class="brand__pimba js-pimba" style="opacity: 0;">Pimba</div>
     </div>
     <div class="brand__letter">
-      <img src="images/logo-letter.png" alt="">
+      <%= image_tag "/images/logo-letter.png" %>
     </div>
   </section>
 
@@ -32,31 +32,31 @@
     <div class="features__scroll-view">
       <div class="feature feature--activities rellax" data-rellax-speed="3" style="transform: translate(-150px, 150px); opacity: 0">
         <div class="feature__icon">
-          <img src="/images/welcome/bike-icon.png" alt="bicicleta">
+          <%= image_tag "/images/welcome/bike-icon.png", alt: 'bicicleta' %>
         </div>
         <div class="feature__title">Atividades recorrentes para praticar na cidade</div>
       </div>
       <div class="feature feature--events rellax" data-rellax-speed="1" style="transform: translate(-100px, -150px); opacity: 0">
         <div class="feature__icon">
-          <img src="/images/welcome/calendar-icon.png" alt="calendário">
+          <%= image_tag "/images/welcome/calendar-icon.png", alt: "calendário" %>
         </div>
         <div class="feature__title">Eventos sugeridos com base no seu gosto individual</div>
       </div>
       <div class="feature feature--topics rellax" data-rellax-speed="1" style="transform: translate(0px, 150px); opacity: 0">
         <div class="feature__icon">
-          <img src="/images/welcome/hearth-icon.png" alt="coração">
+          <%= image_tag "/images/welcome/hearth-icon.png", alt: "coração" %>
         </div>
         <div class="feature__title">Siga os tópicos que você gosta e fique sempre por dentro</div>
       </div>
       <div class="feature feature--friends rellax" data-rellax-speed="1" style="transform: translate(100px, -150px); opacity: 0">
         <div class="feature__icon">
-          <img src="/images/welcome/friends-icon.png" alt="amigos">
+          <%= image_tag "/images/welcome/friends-icon.png", alt: "amigos" %>
         </div>
         <div class="feature__title">Compartilhe com seus melhores amigos seus planos</div>
       </div>
       <div class="feature feature--movie rellax" data-rellax-speed="3" style="transform: translate(150px, 150px); opacity: 0">
         <div class="feature__icon">
-          <img src="/images/welcome/movie-icon.png" alt="filme">
+          <%= image_tag "/images/welcome/movie-icon.png", alt: "filme" %>
         </div>
         <div class="feature__title">Filmes do Mario Quintana, Capitólio e Cinemark</div>
       </div>
@@ -68,7 +68,7 @@
       <div class="macbook rellax" data-rellax-speed="1">
         <div class="macbook__screen">
           <div class="macbook__beta-explanation"></div>
-          <img src="/images/welcome/demo-2.gif" alt="">
+          <%= image_tag "/images/welcome/demo-2.gif", alt: "demonstração" %>
         </div>
       </div>
     </section>
@@ -91,7 +91,7 @@
     <div class="invite__cta" title="Seja um Beta tester!">
       Pegar Convite
       <span>
-        <img src="/images/welcome/right-arrow.png" alt="seta">
+        <%= image_tag "/images/welcome/right-arrow.png", alt: "seta" %>
       </span>
     </div>
     <div class="invite__google-details">
