Adjust images for production and add favicon

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -8,9 +8,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: url('/images/welcome/bg-top.jpg') no-repeat top center;
+  background: url('/assets/images/welcome/bg-top.jpg') no-repeat top center;
   @include mobile-only {
-    background: url('/images/welcome/bg-top-mobile.jpg') no-repeat top center;
+    background: url('/assets/images/welcome/bg-top-mobile.jpg') no-repeat top center;
   }
 }
 
@@ -217,7 +217,7 @@ section {
 .macbook {
   width: 800px;
   height: 440px;
-  background: url("/images/welcome/laptop.png") center top;
+  background: url("/assets/images/welcome/laptop.png") center top;
   margin: 95px 0 0 0;
 
   &__screen {
@@ -236,7 +236,7 @@ section {
   &__beta-explanation {
     width: 259px;
     height: 137px;
-    background: url(/images/welcome/beta-explanation.png) no-repeat center top;
+    background: url(/assets/images/welcome/beta-explanation.png) no-repeat center top;
     position: absolute;
     right: -180px;
     top: 95px;
@@ -359,12 +359,12 @@ section {
     margin: 10px auto 0 auto;
     width: 381px;
     height: 35px;
-    background: url("/images/welcome/google-details.png") no-repeat center;
+    background: url("/assets/images/welcome/google-details.png") no-repeat center;
     transition: opacity 0.4s ease;
     @include mobile-only {
       width: 220px;
       height: 51px;
-      background: url("/images/welcome/google-details-mobile.png") no-repeat center;
+      background: url("/assets/images/welcome/google-details-mobile.png") no-repeat center;
     }
   }
 
@@ -409,7 +409,7 @@ section {
 .questions {
   width: 100%;
   height: 920px;
-  background: url(/images/welcome/bg-footer.jpg) no-repeat top center;
+  background: url(/assets/images/welcome/bg-footer.jpg) no-repeat top center;
   position: relative;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -417,7 +417,7 @@ section {
   user-select: none;
 
   @include mobile-only {
-    background: url(/images/welcome/bg-footer-mobile.jpg) no-repeat bottom center
+    background: url(/assets/images/welcome/bg-footer-mobile.jpg) no-repeat bottom center
   }
 
   & h2 {
@@ -594,7 +594,7 @@ section {
 .skatista {
   width: 98px;
   height: 152px;
-  background: url(/images/welcome/skatista.png);
+  background: url(/assets/images/welcome/skatista.png);
   position: absolute;
   bottom: 35px;
   right: -100px;
