--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= favicon_link_tag asset_path 'apple-touch-icon.png', sizes="180x180" %>
-  <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes="32x32" %>
-  <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes="16x16" %>
+  <%= favicon_link_tag asset_path 'apple-touch-icon.png', sizes: "180x180" %>
+  <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes: "32x32" %>
+  <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes: "16x16" %>
 
   <link rel="manifest" href="/site.webmanifest">
 
