--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -10,8 +10,12 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <%= favicon_link_tag asset_path 'apple-touch-icon.png', sizes: "180x180" %>
+  <%= favicon_link_tag asset_path 'favicon-32x32.png', sizes: "32x32" %>
+  <%= favicon_link_tag asset_path 'favicon-16x16.png', sizes: "16x16" %>
+
   <%= stylesheet_link_tag 'welcome/application' %>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700|Roboto:300,400,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Cabin:400,500,600,700">
   <%= Gon::Base.render_data %>
 
 </head>
